[project]
name = "livrosebac"
version = "0.1.0"
description = ""
authors = [
    {name = "Majari",email = "majaandressa@hotmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "fastapi[standard] (>=0.135.2,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
